--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lucide-react": "^0.546.0",
     "next": "16.0.0-canary.15",
     "ogl": "^1.0.11",
+    "posthog-js": "^1.276.0",
+    "posthog-node": "^5.10.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1"
