--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
+    "mongoose": "^8.19.1",
     "next": "16.0.0-canary.15",
     "ogl": "^1.0.11",
     "posthog-js": "^1.276.0",
